--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,60 +1,25 @@
 name: flutter_sandbox
 description: "A new Flutter project."
 
-
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
   sdk: ^3.6.0
 
-
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  
-
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^5.0.0
-
 
 flutter:
 
   uses-material-design: true
-
-  
-  
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
