--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_sandbox
 description: "A new Flutter project."
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -10,16 +10,23 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
+  fbloc_event_gen: ^3.2.6+1
+  intl: 0.19.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  get_it: ^8.0.3
   google_fonts: ^6.2.1
+  dartz: ^0.10.1
+  injectable: ^2.5.0
+  
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  injectable_generator: ^2.6.2
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
