--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_sandbox
 description: "A new Flutter project."
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -10,16 +10,18 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
+  fbloc_event_gen: ^3.2.6
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
   google_fonts: ^6.2.1
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
